<resources>
    <string name="app_name">StocksPortfolioAppKotlin</string>
    <string name="stocks_full_list">STOCKS_FULL_LIST</string>
    <string name="stocks_malformed_list">STOCKS_MALFORMED_LIST</string>
    <string name="stocks_empty_list">STOCKS_EMPTY_LIST</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ticker">TKR</string>
    <string name="currency">USD</string>
    <string name="current_price_cents">00.00</string>
    <string name="name">Name,</string>
    <string name="no_stocks_to_display">No stocks to display!</string>
</resources>