<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/dp_4"
    android:layout_marginVertical="@dimen/dp_2">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/stockCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/dp_8"
        app:cardUseCompatPadding="false"
        android:backgroundTint="@color/blue_90">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:layout_marginVertical="@dimen/dp_8">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@id/current_price_cents"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/current_price_cents"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/current_price_cents"
                app:layout_constraintBottom_toTopOf="@id/ticker"
                app:layout_constraintEnd_toStartOf="@id/currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/currency"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/currency"
                app:layout_constraintBottom_toBottomOf="@id/current_price_cents"
                app:layout_constraintStart_toEndOf="@id/current_price_cents" />

            <TextView
                android:id="@+id/ticker"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/ticker"
                app:layout_constraintBottom_toTopOf="@id/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/current_price_cents" />

            <TextView
                android:id="@+id/quantity"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="#of stocks owned: 0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ticker" />

            <TextView
                android:id="@+id/current_price_timestamp"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="Time: 00:00"
                app:layout_constraintBottom_toBottomOf="@id/quantity"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="quantity,current_price_timestamp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>